ingress/global-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - secretName: ingress-tls
      hosts:
        - "*.example.com"
  rules:
    - host: kiada.example.com
      http:
        paths:
          - backend:
              service:
                name: kiada
                port:
                  name: http
            pathType: Prefix
            path: /
    - host: '*.example.com'
      http:
        paths:
          - backend:
              service:
                name: quote
                port:
                  name: http
            pathType: Exact
            path: /quote
          - backend:
              service:
                name: quiz
                port:
                  name: http
            pathType: Prefix
            path: /questions
