ingress/kiada-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiada-ing
spec:
  rules:
    - host: kiada.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kiada
                port:
                  name: http
